[package]
name = "atrac3p-decoder"
version = "0.1.0"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"
description = "Atrac3+ Decoder in Rust. Can be used as a source for Rodio."
documentation = "https://docs.rs/atrac3p-decoder"
repository = "https://github.com/tarkah/atrac3p-decoder"
readme = "README.md"
keywords = ["audio", "decoder", "rodio", "atrac"]
categories = ["multimedia::audio", "multimedia::encoding"]


[dependencies]
bitstream-io = "0.8"
lazy_static = "1.4"
num = "0.2.1"
riff-wave-reader = "0.1"
rodio = { version = "0.11", default-features = false }
rustdct = "0.4"
take_mut = "0.2"
thiserror = "1.0"

[workspace]
members = [
    ".",
    "cli",
]
default-members = [
    "cli",
]